Fixed function for collapseable iframes. Now works.

--- a/index.css
+++ b/index.css
@@ -33,3 +33,11 @@ html, body{
         right: 0;
         border-radius: 25px;
     }
+
+.collapse {
+    position:absolute; 
+   
+    border: 1px solid black;
+    background-color: white;
+    text-decoration: none;
+}
